# fftools-ffi

./: .gitignore  README.md  cmdutils.c  cmdutils.h  config.h  dart_api.c  dart_api.cc  dart_api.h  dart_api_types.h  ffmpeg.c  ffmpeg.h  ffmpeg_cmd.c  ffmpeg_demux.c  ffmpeg_hw.c  ffmpeg_mux.c  ffmpeg_mux.h  ffmpeg_mux_init.c  ffmpeg_opt.c  ffprobe.c  ffprobe_cmd.c  fftools.c  fftools.h  fftools_api.h  meson.build  opt_common.c
demo/: pubspec.yaml
libavutil/: getenv_utf8.h  internal.h  thread.h
